- Changed Home button colour on Homepage to darker red

--- a/dmuBlogger/dmuBlogger/Views/Home/Index.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Home/Index.cshtml
@@ -16,8 +16,9 @@
 
             </div>
             <div class="KeypadLogoBanner"> </div>
+                
             <nav class="Navigation">
-                <button>Home</button>
+                <button class="SelectedButton">Home</button>
                 <button>Search</button>
                 <button>Contact Us</button>
                 <button>Register</button>
