--- a/dmuBlogger/dmuBlogger/Content/CSS/Home.css
+++ b/dmuBlogger/dmuBlogger/Content/CSS/Home.css
@@ -27,17 +27,19 @@
     margin: auto;
 
 }
+    .Navigation .SelectedButton {
+        background-color: #630101;
+    }
     .Navigation button {
         width: 160px;
         height: 40px;
         color: white;
-        /* Note that the dark red is #630101*/
         background-color: #c40000;
         border: 3px solid #630101;
         border-radius: 10px;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size:24px;
-        font-weight:700;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 24px;
+        font-weight: 700;
     }
 .Welcome {
     width: 50%;
