Organized file structure. Added and removed some empty spaces and line breakes.

--- a/dmuBlogger/dmuBlogger/Views/Home/Index.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <head>
     <link rel="stylesheet" href="~/Content/CSS/Home.css" />
     <meta charset="utf-8" />
-    <title>DMU Blogger Home</title>
+    <title>dmuBlogger | A game review portal</title>
 </head>
 <body>
     <div class="Contents">
@@ -16,7 +16,6 @@
 
             </div>
             <div class="KeypadLogoBanner"> </div>
-                
             <nav class="Navigation">
                 <button class="SelectedButton">Home</button>
                 <button>Search</button>
@@ -27,19 +26,18 @@
         </header>
         <section>
             <div class="Welcome">
-                <p>Welcome to DMU Blogger</p>
+                <p>Welcome to dmuBlogger</p>
             </div>
             <div class="Message">
                 <p>
                     The number one website for those gamers who want to know more about what others think of the different games out there.
                 </p>
             </div>
-
             <div class="flexOrder">
                 <div class="firstColumn">
                     <p>Puzzle Games</p>
                     <p>Trivia</p>
-                    <p> Combat Games</p>
+                    <p>Combat Games</p>
                     <p>Kids Games</p>
                 </div>
                 <div class="secondColumn">
@@ -47,7 +45,6 @@
                     <div class="TextLogo"></div>
                     <p>Board Games</p>
                 </div>
-
                 <div class="thirdColumn">
                     <p>Racing Games</p>
                     <p>18+ Games</p>
@@ -55,11 +52,7 @@
                     <p>Card Games</p>
                 </div>
             </div>
-
-
         </section>
-
-
         <footer>
             <div class="FooterText">
                 dmuBlogger © 2020, Team SampleText
