--- a/dmuBlogger/dmuBlogger/Views/Home/Index.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Home/Index.cshtml
@@ -4,28 +4,29 @@
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p class="lead">DmuBlogger is a great site for sharing reviews, talking games and high quality discussion</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Reviews</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            We have an extensive collection of reviews for you to browse
+            and enjoy. Take your time to read over reviews for your favourite game,
+            comment and discuss them with other users!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Reviews">Browse Reviews &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Games</h2>
+        <p>We have a database of games for you to browse, from which you can see all
+        reviews for that game. You can also check the game's details to learn more about it.</p>
+        <p><a class="btn btn-default" href="~/Games">Browse Games &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Developers</h2>
+        <p>Every game has the developer behind it, and DmuBlogger is the best place to get
+        info about them! Browse and add developers and browse game by developer.</p>
+        <p><a class="btn btn-default" href="~/Developers">Browse Developers &raquo;</a></p>
     </div>
 </div>
