--- a/dmuBlogger/dmuBlogger/Views/Reviews/Details.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Reviews/Details.cshtml
@@ -17,19 +17,19 @@
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.Genre)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Genre)
-            </dd>
-    
-            <dt>
                 @Html.DisplayNameFor(model => model.Title)
             </dt>
     
             <dd>
                 @Html.DisplayFor(model => model.Title)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.Genre)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.Genre)
             </dd>
     
             <dt>
@@ -46,6 +46,22 @@
     
             <dd>
                 @Html.DisplayFor(model => model.Score)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.SelectedDeveloper)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.SelectedDeveloper)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.SelectedGame)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.SelectedGame)
             </dd>
     
         </dl>
