--- a/dmuBlogger/dmuBlogger/Views/Reviews/Index.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Reviews/Index.cshtml
@@ -18,10 +18,10 @@
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Genre)
+                @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Genre)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
@@ -29,32 +29,43 @@
             <th>
                 @Html.DisplayNameFor(model => model.Score)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SelectedDeveloper)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SelectedGame)
+            </th>
             <th></th>
         </tr>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Genre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Score)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ReviewID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.ReviewID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ReviewID })
-                </td>
-            </tr>
-        }
-
+    
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Genre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Score)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SelectedDeveloper)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SelectedGame)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id=item.ReviewID }) |
+                @Html.ActionLink("Details", "Details", new { id=item.ReviewID }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.ReviewID })
+            </td>
+        </tr>
+    }
+    
     </table>
 </body>
 </html>
