--- a/dmuBlogger/dmuBlogger/Views/Reviews/Create.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Reviews/Create.cshtml
@@ -59,7 +59,7 @@
             <div class="form-group">
                 @Html.LabelFor(x => Model.SelectedDeveloper, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.DropDownListFor(x => Model.SelectedDeveloper, new SelectList(Model.Developer, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "Developer" })
+                    @Html.EditorFor(model => model.SelectedGame, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(x => x.SelectedDeveloper, "", new { @class = "text-danger" })
                 </div>
             </div>
