--- a/dmuBlogger/dmuBlogger/Views/Comments/Create.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Comments/Create.cshtml
@@ -2,6 +2,8 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    Int32 ReviewID = Convert.ToInt32(ViewData["id"]);
+    TempData["id"] = ReviewID;
 }
 
 <!DOCTYPE html>
@@ -14,12 +16,12 @@
 <body>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
-    
-    
-    @using (Html.BeginForm()) 
+
+
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
+
         <div class="form-horizontal">
             <h4>Comment</h4>
             <hr />
@@ -27,11 +29,11 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ReviewID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.ReviewID, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.ReviewID, new { htmlAttributes = new { @class = "form-control", @Value = Convert.ToString(ReviewID), disabled = "disabled"} })
                     @Html.ValidationMessageFor(model => model.ReviewID, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -39,7 +41,7 @@
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -47,7 +49,7 @@
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.EMail, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -55,7 +57,7 @@
                     @Html.ValidationMessageFor(model => model.EMail, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
@@ -63,7 +65,7 @@
             </div>
         </div>
     }
-    
+
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
