--- a/dmuBlogger/dmuBlogger/Views/Comments/Details.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Comments/Details.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
+    <title>Comments for @TempData["ReviewID"]</title>
 </head>
 <body>
     <div>
