Changes to homepage and layout, migrations for game

--- a/dmuBloggerExperimental/dmuBlogger/Views/Home/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Home/Index.cshtml
@@ -3,29 +3,42 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>DmuBlogger</h1>
+    <p class="lead">
+        DmuBlogger is the #1 site for exploring games, game developers and game reviews. Discuss your
+        favourites in the comments with other users!
+    </p>
+    <p><a href="https://github.com/DMU-CTEC2902-1920/Sample-Text" class="btn btn-primary btn-lg">View site source &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Developers</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            All games have the people behind them! Here, you can browse, add and discuss game developers.
+            You can add a game from a developer's detail page.
+            <br />
+            <br />
+            <br />
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Developers/Index">Browse developers &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Games</h2>
+        <p>
+            You can browse our extensive collection of game titles on DmuBlogger, and if you don't
+            find the one you're looking for you can add it yourself! You can add a game to a developer from the developer's details page
+            <br />
+            <br />
+        </p>
+        <p><a class="btn btn-default" href="/Games/Index">Browse games &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Reviews</h2>
+        <p>
+            What game to play next? With DmuBlogger's reviews, you can see what others have to say about the latest and greatest titles.
+            Tell others what you think, and discuss with others in the comments. You can add a review to a game from the game's details page
+        </p>
+        <p><a class="btn btn-default" href="/Reviews/Index">Browse reviews &raquo;</a></p>
     </div>
 </div>
