--- a/dmuBloggerExperimental/dmuBlogger/Views/Games/Details.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Games/Details.cshtml
@@ -38,5 +38,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.GameId }) |
+    @Html.ActionLink("View Reviews", "../Reviews/Index", new { id = Model.GameId })|
     @Html.ActionLink("Back to List", "Index")
 </p>
