--- a/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Delete.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Delete.cshtml
@@ -50,19 +50,19 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.SelectedDeveloper)
+                @Html.DisplayNameFor(model => model.DeveloperID)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.SelectedDeveloper)
+                @Html.DisplayFor(model => model.DeveloperID)
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.SelectedGame)
+                @Html.DisplayNameFor(model => model.GameID)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.SelectedGame)
+                @Html.DisplayFor(model => model.GameID)
             </dd>
 
         </dl>
