--- a/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Details.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Details.cshtml
@@ -49,19 +49,19 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.SelectedDeveloper)
+                @Html.DisplayNameFor(model => model.DeveloperID)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.SelectedDeveloper)
+                @Html.DisplayFor(model => model.DeveloperID)
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.SelectedGame)
+                @Html.DisplayNameFor(model => model.GameID)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.SelectedGame)
+                @Html.DisplayFor(model => model.GameID)
             </dd>
 
         </dl>
@@ -69,9 +69,7 @@
     <p>
         @Html.ActionLink("Edit", "Edit", new { id = Model.ReviewID }) |
         @Html.ActionLink("Back to List", "Index") |
-        @Html.ActionLink("View Comments", "../Comments")
-        <!--Html.ActionLink("View Comments", "../Comments", new { ReviewID = Model.ReviewID })-->
-        @{ TempData["ReviewID"] = Model.ReviewID; }
+        @Html.ActionLink("View Comments", "../Comments/Index", new { id = Model.ReviewID })
     </p>
 </body>
 </html>
