--- a/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Create.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Create.cshtml
@@ -2,6 +2,10 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    Int32 GameID = Convert.ToInt32(ViewData["id"]);
+    Int32 DeveloperID = Convert.ToInt32(ViewData["developerID"]);
+    TempData["GameID"] = GameID;
+    TempData["DeveloperID"] = DeveloperID;
 }
 
 <!DOCTYPE html>
@@ -57,18 +61,18 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(x => Model.SelectedDeveloper, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(x => Model.DeveloperID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.EditorFor(model => model.SelectedGame, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(x => x.SelectedDeveloper, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.GameID, new { htmlAttributes = new { @class = "form-control", @Value = Convert.ToString(DeveloperID), disabled = "disabled" } })
+                    @Html.ValidationMessageFor(x => x.DeveloperID, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.SelectedGame, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.GameID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.SelectedGame, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.SelectedGame, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.GameID, new { htmlAttributes = new { @class = "form-control", @Value = Convert.ToString(GameID), disabled = "disabled" } })
+                    @Html.ValidationMessageFor(model => model.GameID, "", new { @class = "text-danger" })
                 </div>
             </div>
 
