--- a/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Edit.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Edit.cshtml
@@ -59,18 +59,18 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.SelectedDeveloper, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.DeveloperID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.SelectedDeveloper, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.SelectedDeveloper, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.DeveloperID, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DeveloperID, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.SelectedGame, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.GameID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.SelectedGame, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.SelectedGame, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.GameID, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.GameID, "", new { @class = "text-danger" })
                 </div>
             </div>
 
