Users cannot add reviews or games without first having come from the game or developer page respectively. Trying to add redirects them to the correct page.

--- a/dmuBloggerExperimental/dmuBlogger/Views/Games/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Games/Index.cshtml
@@ -16,10 +16,19 @@
 
     <h2>@Title</h2>
 
-<p>
-    <br />
-    @Html.ActionLink("Add Game", "Create", new { id = ViewData["id"] })
-</p>
+    <p>
+        <br />
+        @{
+            if (ViewData["id"] == null)
+            {
+                @Html.ActionLink("To add a game, go to the developer page and select a developer", "../Developers/Index/");
+            }
+            else
+            {
+                @Html.ActionLink("Add Game", "Create", new { id = ViewData["id"] });
+            }
+        }
+    </p>
 <table class="table">
     <tr>
         <th>
