--- a/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Index.cshtml
@@ -19,7 +19,7 @@
     @{
         if (ViewData["id"] == null)
         {
-            @Html.ActionLink("To add a review, go to the game page and select a game", "../Games/Index/");
+            @Html.ActionLink("To add a review or browse reviews by game, go to the game page and select a game", "../Games/Index/");
         }
         else
         {
