Added full blacklist functionality. Moderators can add an IP address which prevents a client with that IP from submitting, editing or deleting content.

--- a/dmuBloggerExperimental/dmuBlogger/Views/Developers/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Developers/Index.cshtml
@@ -13,6 +13,7 @@
 @using (Html.BeginForm())
 {
     <p>
+        <!--Adds in a search box so the user can browse developers easier-->
         Find by name: @Html.TextBox("SearchString")
         <input type="submit" value="Search" />
     </p>
