--- a/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Create.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Create.cshtml
@@ -4,22 +4,30 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Blacklist IP</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Blacklist</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.BlacklistEmail, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BlacklistIP, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BlacklistEmail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BlacklistEmail, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.BlacklistIP, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BlacklistIP, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.BlacklistReason, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BlacklistReason, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BlacklistReason, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -34,6 +42,8 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+</body>
+</html>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
