--- a/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Delete.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Delete.cshtml
@@ -4,19 +4,25 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Unban IP</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to unban this IP?</h3>
 <div>
     <h4>Blacklist</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.BlacklistEmail)
+            @Html.DisplayNameFor(model => model.BlacklistIP)
+        </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.BlacklistReason)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BlacklistEmail)
+            @Html.DisplayFor(model => model.BlacklistIP)
+        </dd>
+        <dd>
+            @Html.DisplayFor(model => model.BlacklistReason)
         </dd>
 
     </dl>
