--- a/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Details.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Details.cshtml
@@ -11,16 +11,23 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.BlacklistEmail)
+            @Html.DisplayNameFor(model => model.BlacklistIP)
+        </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.BlacklistReason)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BlacklistEmail)
+            @Html.DisplayFor(model => model.BlacklistIP)
+        </dd>
+        <dd>
+            @Html.DisplayFor(model => model.BlacklistReason)
         </dd>
 
     </dl>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.BlacklistId }) |
+    @Html.ActionLink("Remove from blacklist", "Delete", new { id = Model.BlacklistId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
