--- a/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Edit.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Edit.cshtml
@@ -18,10 +18,18 @@
         @Html.HiddenFor(model => model.BlacklistId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BlacklistEmail, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BlacklistIP, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BlacklistEmail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BlacklistEmail, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.BlacklistIP, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BlacklistIP, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.BlacklistReason, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BlacklistReason, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BlacklistReason, "", new { @class = "text-danger" })
             </div>
         </div>
 
