--- a/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Blacklists/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Blacklist</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -12,7 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.BlacklistEmail)
+            @Html.DisplayNameFor(model => model.BlacklistIP)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BlacklistReason)
         </th>
         <th></th>
     </tr>
@@ -20,7 +23,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.BlacklistEmail)
+            @Html.DisplayFor(modelItem => item.BlacklistIP)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BlacklistReason)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.BlacklistId }) |
