--- a/dmuBloggerExperimental/dmuBlogger/Views/Comments/Create.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Comments/Create.cshtml
@@ -4,7 +4,7 @@
 
     Layout = "~/Views/Shared/_Layout.cshtml";
     Int32 ReviewID = Convert.ToInt32(ViewData["id"]);
-    TempData["ReviewID"] = ReviewID;
+    TempData["ReviewID"] = ReviewID; //Needed to redirect to the correct page
 }
 
 <!DOCTYPE html>
