--- a/dmuBloggerExperimental/dmuBlogger/Views/Comments/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Comments/Index.cshtml
@@ -5,12 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     int x = Convert.ToInt32(TempData["ReviewID"]);
     string Title = "";
+
     if (ViewData["id"] == null)
     {
-        Title = "ALL COMMENTS SHOULD NOT BE BROWSABLE, FIX THIS";
+        Title = "Comments";
     }
     else
     {
+        //Display the review the comments are for
         Title = "Comments for '" + ViewData["name"]+"'";
     }
 }
