--- a/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Delete.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Reviews/Delete.cshtml
@@ -12,6 +12,7 @@
     <title>Delete</title>
 </head>
 <body>
+    <br />
     <h3>Are you sure you want to delete this?</h3>
     <div>
         <h4>Review</h4>
@@ -72,7 +73,7 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
+                <input type="submit" value="Delete" class="btn btn-primary" /> |
                 @Html.ActionLink("Back to List", "Index")
             </div>
         }
