Added genre filtering and genre model. also added some bootstrap stuff in game index search

--- a/dmuBloggerExperimental/dmuBlogger/Views/Developers/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Developers/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 <br />
-<h2>Index</h2>
+<h2>All developers</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
