--- a/dmuBloggerExperimental/dmuBlogger/Views/Games/Delete.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Games/Delete.cshtml
@@ -29,6 +29,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.GameGenre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.GameGenre)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.GameReleaseDate)
         </dt>
 
