--- a/dmuBloggerExperimental/dmuBlogger/Views/Games/Details.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Games/Details.cshtml
@@ -10,13 +10,12 @@
     <h4>Game</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DeveloperID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeveloperID)
-        </dd>
+        <!--<dt>
+        @Html.DisplayNameFor(model => model.DeveloperID)
+    </dt>-->
+        <!--<dd>
+        @Html.DisplayFor(model => model.DeveloperID)
+    </dd>-->
 
         <dt>
             @Html.DisplayNameFor(model => model.GameName)
@@ -24,6 +23,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.GameName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.GameGenre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.GameGenre)
         </dd>
 
         <dt>
