--- a/dmuBloggerExperimental/dmuBlogger/Views/Games/Edit.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Games/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+    dmuBlogger.Models.Genre Genre = new dmuBlogger.Models.Genre();
 }
 
 <h2>Edit</h2>
@@ -30,6 +31,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.GameName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GameName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.GameGenre, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.GameGenre, new SelectList(Genre.GenreList), new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.GameGenre, "", new { @class = "text-danger" })
             </div>
         </div>
 
