--- a/dmuBloggerExperimental/dmuBlogger/Views/Games/Index.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Games/Index.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Index";
     int x = Convert.ToInt32(TempData["DeveloperID"]);
     string Title = "";
+    dmuBlogger.Models.Genre Genre = new dmuBlogger.Models.Genre();
 
     //Condition to check if the user originated from a developer details page or not, and to set the title appropriately
     if (ViewData["id"] == null)
@@ -17,6 +18,28 @@
 }
 <br />
 <h2>@Title</h2>
+
+<div class="card">
+    <div class="card-header">
+        <a data-toggle="collapse" href="#search">Click to open search</a>
+    </div>
+    <div id="search" class="collapse">
+        <div class="card-body">
+            @using (Html.BeginForm())
+            {
+                <p>
+                    <!--Search box to make it easier to search games-->
+                    Find by name: @Html.TextBox("SearchStringName")
+                    <input type="submit" value="Search by name" class="btn" />
+                </p>
+                <p>
+                    Find by genre: @Html.DropDownList("SearchStringGenre", new SelectList(Genre.GenreList))
+                    <input type="submit" value="Search by genre" class="btn" />
+                </p>
+            }
+        </div>
+    </div>
+</div>
 
 <p>
     <br />
@@ -32,14 +55,7 @@
         }
     }
 </p>
-@using (Html.BeginForm())
-{
-    <p>
-        <!--Search box to make it easier to search games-->
-        Find by name: @Html.TextBox("SearchString")
-        <input type="submit" value="Search" />
-    </p>
-}
+
 <table class="table table-striped">
     <tr>
         <th>
@@ -47,6 +63,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.GameName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.GameGenre)
         </th>
         <th class="text-right">
             @Html.DisplayNameFor(model => model.GameReleaseDate)
@@ -64,6 +83,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.GameName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GameGenre)
                 </td>
                 <td class="text-right">
                     @Html.DisplayFor(modelItem => item.GameReleaseDate)
