Added home page

--- a/dmuBloggerExperimental/dmuBlogger/Views/Shared/_Layout.cshtml
+++ b/dmuBloggerExperimental/dmuBlogger/Views/Shared/_Layout.cshtml
@@ -23,12 +23,15 @@
                     <li class="nav-item">
                         @Html.ActionLink("Developers", "Index", "Developers", null, new { @class = "nav-link" })
                     </li>
-                    <li class="nav-item" >
-                        @Html.ActionLink("Games", "Index", "Games", null,new { @class = "nav-link" })
-                </li>
-                <li class="nav-item">
-                    @Html.ActionLink("Reviews", "Index", "Reviews", null, new { @class = "nav-link" })
-                </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Games", "Index", "Games", null, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Reviews", "Index", "Reviews", null, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })
+                    </li>
                 </ul>
             </div>
         </div>
