--- a/dmuBlogger/dmuBlogger/Views/Shared/_Layout.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         @Html.ActionLink("Reviews", "Index", "Reviews", null, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
+                        @Html.ActionLink("Mod panel", "Index", "Blacklists", null, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
                         @Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })
                     </li>
                 </ul>
