--- a/dmuBlogger/dmuBlogger/Views/Reviews/Edit.cshtml
+++ b/dmuBlogger/dmuBlogger/Views/Reviews/Edit.cshtml
@@ -36,13 +36,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <!--<div class="form-group">
                 @Html.LabelFor(model => model.Genre, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Genre, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Genre, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>-->
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -60,13 +60,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <!--<div class="form-group">
                 @Html.LabelFor(model => model.DeveloperID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.DeveloperID, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.DeveloperID, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>-->
 
             <div class="form-group">
                 @Html.LabelFor(model => model.GameID, htmlAttributes: new { @class = "control-label col-md-2" })
